--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<body>
-  
+<body class="page-background">
+  <header id="#main-header"></header>
+  <h1>Activity and Vacation Planner</h1>
+  <h2>Add an Activity</h2>
+
+  <label>Activity Name</label>
+  <input><br><br>
+  <label>Activity Description</label>
+  <input><br><br><br><br>
+  <label>Day</label>
+  <input><br><br>
+  <label>Date</label>
+  <input><br><br>
+  <label>Time</label>
+  <input><br><br>
+  <label>Event Duration</label>
+  <input><br><br><br><br>
+  <label>Activity Location</label>
+  <input><br><br>
+  <label>Activity Cost</label>
+  <input><br><br><br>
+  <label>Parking Location</label>
+  <input><br><br>
+  <label>Parking Fee</label>
+  <input><br><br><br><br>
+  <label>Organizer Name</label>
+  <input><br><br>
+  <label>Organizer email</label>
+  <input>
+
+
 </body>
 </html>
