--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -7,10 +7,11 @@
     <title>Sleep Outside | Top Products</title>
   </head>
 
-<h2>Activity Details Edit</h2>
+<h2>Edit Activity Details</h2>
 
 <!--To be imported from the main index.html-->
 <p>Lorem Ipsum</p>
 
 <button>Update</button>
 
+<button>Edit Activity</button> <!--for manager only-->
