--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -7,9 +7,54 @@
     <title>Sleep Outside | Top Products</title>
   </head>
 
+
 <h2>Edit Activity Details</h2>
 
 <!--To be imported from the main index.html-->
+<body>
+  <main>
+    <div class="grid-container">
+      <div class="grid-item">1</div>
+      <div class="grid-item">2</div>
+      <div class="grid-item">3</div>
+      <div class="grid-item">5</div>
+      <div class="grid-item">6</div>
+      <div class="grid-item">7</div>
+      <div class="grid-item">8</div>
+      <div class="grid-item">9</div>
+      <div class="grid-item">10</div>
+      <div class="grid-item">11</div>
+      <div class="grid-item">12</div>
+      <div class="grid-item">13</div>
+      <div class="grid-item">14</div>
+      <div class="grid-item">15</div>
+      <div class="grid-item">16</div>
+      <div class="grid-item">17</div>
+      <div class="grid-item">18</div>
+      <div class="grid-item">19</div>
+      <div class="grid-item">20</div>
+      <div class="grid-item">21</div>
+      <div class="grid-item">22</div>
+      <div class="grid-item">23</div>
+      <div class="grid-item">24</div>
+      <div class="grid-item">25</div>
+      <div class="grid-item">26</div>
+      <div class="grid-item">27</div>
+      <div class="grid-item">28</div>
+      <div class="grid-item">29</div>
+      <div class="grid-item">31</div>
+      <div class="grid-item">32</div>
+      <div class="grid-item">33</div>
+      <div class="grid-item">34</div>
+      <div class="grid-item">35</div>
+    </div>
+  </main>
+</body>
+
+
+<button>Update</button>
+
+
 <p>Lorem Ipsum</p>
 
 <button>Update</button>
