Sorting files/Index pages

--- a/index.html
+++ b/index.html
@@ -1,40 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body class="page-background">
-  <header id="#main-header"></header>
-  <h1>Activity and Vacation Planner</h1>
-  <h2>Add an Activity</h2>
 
-  <label>Activity Name</label>
-  <input><br><br>
-  <label>Activity Description</label>
-  <input><br><br><br><br>
-  <label>Day</label>
-  <input><br><br>
-  <label>Date</label>
-  <input><br><br>
-  <label>Time</label>
-  <input><br><br>
-  <label>Event Duration</label>
-  <input><br><br><br><br>
-  <label>Activity Location</label>
-  <input><br><br>
-  <label>Activity Cost</label>
-  <input><br><br><br>
-  <label>Parking Location</label>
-  <input><br><br>
-  <label>Parking Fee</label>
-  <input><br><br><br><br>
-  <label>Organizer Name</label>
-  <input><br><br>
-  <label>Organizer email</label>
-  <input>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Activity Planner| Home</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="js/main.js" type="module"></script>
+  </head>
 
+  <body>
 
-</body>
-</html>
+  </body>
