--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleep Outside | Top Products</title>
+    <title>Activity Planner| Calendar</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="js/main.js" type="module"></script>
   </head>
 
 
@@ -14,6 +16,12 @@
 <body>
   <main>
     <div class="grid-container">
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
       <div class="grid-item">1</div>
       <div class="grid-item">2</div>
       <div class="grid-item">3</div>
@@ -43,10 +51,10 @@
       <div class="grid-item">28</div>
       <div class="grid-item">29</div>
       <div class="grid-item">31</div>
-      <div class="grid-item">32</div>
-      <div class="grid-item">33</div>
-      <div class="grid-item">34</div>
-      <div class="grid-item">35</div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
+      <div class="grid-item"></div>
     </div>
   </main>
 </body>
