--- a/src/activityDetails/index.html
+++ b/src/activityDetails/index.html
@@ -1,10 +1,15 @@
+
+<!--Do I need this page. I have a details page in "partials"-->
+
 <!DOCTYPE html>
 <html lang="en">
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sleep Outside | Top Products</title>
+    <title>Activity Planner | Details</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="js/main.js" type="module"></script>
   </head>
 
 <h2>Activity Details</h2>
