updateNewActivity & work on js

--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -9,8 +9,8 @@
     <script src="js/main.js" type="module"></script>
   </head>
 
+<header><h2>Edit Activity Details</h2></header>
 
-<h2>Edit Activity Details</h2>
 
 <!--To be imported from the main index.html-->
 <body>
@@ -68,3 +68,5 @@
 <button>Update</button>
 
 <button>Edit Activity</button> <!--for manager only-->
+
+</html>
