--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -8,35 +8,38 @@
   <script src="js/main.js" type="module"></script>
 </head>
 <body class="page-background">
-  <header id="#main-header"></header>
-  <h1>Activity and Vacation Planner</h1>
-  <h2>Add an Activity</h2>
+  <header id="#main-header">
+    <h1>Activity Planner</h1>
+    <h2>Add an Activity</h2>
+  </header>
+    <form id="activityForm">
+      <label for="activityName">Activity Name:</label>
+      <input type="text" id="activityName"><br><br>
+      <label for="activityDescription">Activity Description:</label>
+      <input type="text" id="activityDescription" name="activityDescription"><br><br><br><br>
+  
+      <label for="activityDate">Date</label>
+      <input type="date" id="activityDate" name="activityDate"><br><br>
+      <label for="activityTime">Time:</label>
+      <input type="time" id="activityTime" name="activityTime"><br><br>
+      <label for="activityDuration">Activity Duration:</label>
+      <input type="number" id="activityDuration" name="activityDuration" placeholder="0.5"><span> hrs</span><br><br><br><br>
 
-  <label>Activity Name</label>
-  <input><br><br>
-  <label>Activity Description</label>
-  <input><br><br><br><br>
-  <label>Day</label>
-  <input><br><br>
-  <label>Date</label>
-  <input><br><br>
-  <label>Time</label>
-  <input><br><br>
-  <label>Event Duration</label>
-  <input><br><br><br><br>
-  <label>Activity Location</label>
-  <input><br><br>
-  <label>Activity Cost</label>
-  <input><br><br><br>
-  <label>Parking Location</label>
-  <input><br><br>
-  <label>Parking Fee</label>
-  <input><br><br><br><br>
-  <label>Organizer Name</label>
-  <input><br><br>
-  <label>Organizer email</label>
-  <input>
+      <label for="address">Activity Location:</label>
+      <input type="adress" id="address" name="address" ><br><br>
+      <label for="activityCost">Activity Cost: $</label>
+      <input type="number" id="activityCost" placeholder="25.00"><br><br><br>
 
+      <label for="parkingFee">Parking Fee:</label>
+      <input type="number" id="parkingFee" name="parkingFee" placeholder="5.00"><br><br><br><br>
 
+      <label for="organizerName">Organizer Name:</label>
+      <input type="text" name="organizerName"><br><br>
+      <label for="organizerEmail">Organizer email</label>
+      <input type="email" id="organizerEmail"><br><br><br><br>
+
+      <button type="submit">Add Activity</button>
+    </form>
+  
 </body>
 </html>
