--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -15,7 +15,11 @@
 <!--To be imported from the main index.html-->
 <body>
   <main>
-    <div class="grid-container">
+    <div class="calendar">
+      <div class="header"><!--calendar headers (days of week) --></div>
+      <!--Dates will be generated here-->
+    </div>
+    <!-- <div class="grid-container">
       <div class="grid-item"></div>
       <div class="grid-item"></div>
       <div class="grid-item"></div>
@@ -55,7 +59,7 @@
       <div class="grid-item"></div>
       <div class="grid-item"></div>
       <div class="grid-item"></div>
-    </div>
+    </div> -->
   </main>
 </body>
 
