update new activity & calendar

--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -8,7 +8,7 @@
   <script src="js/main.js" type="module"></script>
 </head>
 <body class="page-background">
-  <header id="#main-header">
+  <header id="main-header">
     <h1>Activity Planner</h1>
     <h2>Add an Activity</h2>
   </header>
@@ -26,7 +26,7 @@
       <input type="number" id="activityDuration" name="activityDuration" placeholder="0.5"><span> hrs</span><br><br><br><br>
 
       <label for="address">Activity Location:</label>
-      <input type="adress" id="address" name="address" ><br><br>
+      <input type="address" id="address" name="address" ><br><br>
       <label for="activityCost">Activity Cost: $</label>
       <input type="number" id="activityCost" placeholder="25.00"><br><br><br>
 
