--- a/src/activityDetails/index.html
+++ b/src/activityDetails/index.html
@@ -13,7 +13,12 @@
   </head>
 
 <h2>Activity Details</h2>
-
+  <div id="activityModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <div id="modalContent"></div>
+    </div>
+  </div>
 <!--To be imported from the main index.html-->
 <!--This is a view only for the user-->
 
