--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -40,6 +40,15 @@
 
       <button type="submit">Add Activity</button>
     </form>
+    <footer>
+      <nav>
+        <ul>
+          <li <a href="home"></a>>Home</a></li>
+          <li <a href="calendar"></a>>Calendar</a></li>
+          <li <a href="home"></a>>Home</a></li>
+        </ul>
+      </nav>
+    </footer>
   
 </body>
 </html>
