--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
   </head>
 
   <body>
+    <div class="begin">
+      <div class="login container">
+        <h1>Login</h1>
+        <form id="loginForm">
+          <label for="userName" placeholder="Username" required>User Name: </label>
+          <input type="text" id="userName"><br><br><br>
+          <label for="password" placeholder="Password" required>Password: </label>
+          <input type="password" id="password">
 
+          
+          <button type="submit">Log in</button>
+          <button type="button" class="new-account" onclick="href='register.html'">Create New Account</button>
+        </form>
+    </div>
+    <script src="js/login.js"></script>
+  </div>
   </body>
