--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -19,17 +19,8 @@
       <div class="header"><!--calendar headers (days of week) --></div>
       <!--Dates will be generated here-->
     </div>
-    <!-- <div class="grid-container">
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item">1</div>
-     etc...
-    </div> -->
   </main>
+  <footer></footer>
 </body>
 
 
