deleted a file, debugging, typos, etc.

--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -6,31 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Activity Planner| Calendar</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="js/main.js" type="module"></script>
+    <script src="../js/main.js" type="module"></script>
   </head>
-
-<header><h2>Edit Activity Details</h2></header>
 
 
 <!--To be imported from the main index.html-->
 <body>
+  <header><h2>Edit Activity Details</h2>
+  </header>
   <main>
     <div class="calendar">
       <div class="header"><!--calendar headers (days of week) --></div>
       <!--Dates will be generated here-->
     </div>
   </main>
-  <footer></footer>
-</body>
-
-
 <button>Update</button>
-
-
 <p>Lorem Ipsum</p>
 
 <button>Update</button>
 
 <button>Edit Activity</button> <!--for manager only-->
+  <footer></footer>
+</body>
+
 
 </html>
