--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
           <label for="password" placeholder="Password" required>Password: </label>
           <input type="password" id="password">
 
-          
           <button type="submit">Log in</button>
-          <button type="button" class="new-account" onclick="href='register.html'">Create New Account</button>
+          <button type="button" class="new-account" onclick="window.location.href='register.html'">Create New Account</button>
         </form>
     </div>
     <script src="js/login.js"></script>
