--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Activity Planner| Activity Entry</title>
   <link rel="stylesheet" href="/css/style.css" />
-  <script src="js/main.js" type="module"></script>
+  <script src="../js/main.js" type="module"></script>
 </head>
 <body class="page-background">
   <header id="main-header">
