more file setup & login setup

--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -1,6 +1,3 @@
-
-<!--Do I need this page. I have a details page in "partials"-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,17 +9,16 @@
     <script src="../js/main.js" type="module"></script>
   </head>
 
-<h2>Activity Details</h2>
-  <div id="activityModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <div id="modalContent"></div>
-    </div>
-  </div>
-<!--To be imported from the main index.html-->
-<!--This is a view only for the user-->
-
-<p>Lorem Ipsum</p>
+  <body>
+    <h2>Activity Details</h2>
+      <div id="activityModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <div id="modalContent"></div>
+        </div>
+      </div>
+    <p>Lorem Ipsum</p>
 
 <button>Edit Details</button> <!--Account Manager only-->
-
+</body>
+</html>
