--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -25,7 +25,7 @@
 
 <button>Update</button>
 
-<button>Edit Activity</button> <!--for manager only-->
+<button onclick="deleteActivity">Edit Activity</button> <!--for manager only-->
   <footer></footer>
 </body>
 
