--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +7,8 @@
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/main.js" type="module"></script>
   </head>
-
-
-<!--To be imported from the main index.html-->
+<!--On the correct date the calendar will display the activity name and the time-->
+<!--The user then click the activity for the details on activity-->
 <body>
   <header><h2>Edit Activity Details</h2>
   </header>
@@ -20,14 +18,14 @@
       <!--Dates will be generated here-->
     </div>
   </main>
-<button>Update</button>
-<p>Lorem Ipsum</p>
 
-<button>Update</button>
+  <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
+  <button onclick="showWeather">Weather</button>
 
 <button onclick="deleteActivity">Edit Activity</button> <!--for manager only-->
+
+
   <footer></footer>
+
 </body>
-
-
 </html>
