--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,16 +13,26 @@
       <div class="login container">
         <h1>Login</h1>
         <form id="loginForm">
-          <label for="userName" placeholder="Username" required>User Name: </label>
-          <input type="text" id="userName"><br><br><br>
-          <label for="password" placeholder="Password" required>Password: </label>
-          <input type="password" id="password">
+          <label for="email" required>User Name: </label>
+          <input
+            type="email"
+            id="email"
+            placeholder="joe@email.com"
+          /><br /><br /><br />
+          <label for="password" required>Password: </label>
+          <input type="password" id="password" placeholder="Password" />
 
           <button type="submit">Log in</button>
-          <button type="button" class="new-account" onclick="window.location.href='register.html'">Create New Account</button>
+          <button
+            type="button"
+            class="new-account"
+            onclick="window.location.href='register.html'"
+          >
+            Create New Account
+          </button>
         </form>
+      </div>
+      <script src="js/login.js"></script>
     </div>
-    <script src="js/login.js"></script>
-  </div>
   </body>
-  </html>
+</html>
