--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,25 +7,23 @@
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/main.js" type="module"></script>
   </head>
-<!--On the correct date the calendar will display the activity name and the time-->
-<!--The user then click the activity for the details on activity-->
-<body>
-  <header><h2>Edit Activity Details</h2>
-  </header>
-  <main>
-    <div class="calendar">
-      <div class="header"><!--calendar headers (days of week) --></div>
-      <!--Dates will be generated here-->
-    </div>
-  </main>
+  <!--On the correct date the calendar will display the activity name and the time-->
+  <!--The user then click the activity for the details on activity-->
+  <body>
+    <header><h2>Edit Activity Details</h2></header>
+    <main>
+      <div class="calendar">
+        <div class="header"><!--calendar headers (days of week) --></div>
+        <!--Dates will be generated here-->
+      </div>
+    </main>
 
-  <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
-  <button onclick="showWeather()">Weather</button>
+    <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
+    <button onclick="showWeather()">Weather</button>
 
-<button onclick="deleteActivity()">Edit Activity</button> <!--for manager only-->
+    <button onclick="deleteActivity()">Edit Activity</button>
+    <!--for manager only-->
 
-
-  <footer></footer>
-
-</body>
+    <footer></footer>
+  </body>
 </html>
