--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,14 +10,15 @@
 
   <body>
     <h2>Activity Details</h2>
-      <div id="activityModal" class="modal">
-        <div class="modal-content">
-          <span class="close">&times;</span>
-          <div id="modalContent"></div>
-        </div>
+    <div id="activityModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="modalContent"></div>
       </div>
+    </div>
     <p>Lorem Ipsum</p>
 
-<button>Edit Details</button> <!--Account Manager only-->
-</body>
+    <button>Edit Details</button>
+    <!--Account Manager only-->
+  </body>
 </html>
