--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Activity Planner| Home</title>
-    <link rel="stylesheet" href="src/css/style.css" />
-    <script src="src/js/main.js" type="module"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/main.js" type="module"></script>
   </head>
 
   <body>
@@ -32,7 +32,7 @@
           </button>
         </form>
       </div>
-      <script src="js/login.js"></script>
+      <script src="js/login.js" type="module"></script>
     </div>
   </body>
 </html>
