--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Activity Planner| Home</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/main.js" type="module"></script>
+    <script src="src/js/login.js" type="module"></script>
   </head>
 
   <body>
     <div class="begin">
       <div class="login container">
         <h1>Login</h1>
-        <form id="loginForm">
-          <label for="email" required>User Name: </label>
+        <form id="loginForm" onsubmit="handleLogin(event)">
           <input
             type="email"
-            id="email"
-            placeholder="joe@email.com"
-          /><br /><br /><br />
-          <label for="password" required>Password: </label>
-          <input type="password" id="password" placeholder="Password" />
+            id="userName"
+            placeholder="Email" required>
+          <br /><br /><br />
+          <input type="password" id="password" placeholder="Password" required>
 
           <button type="submit">Log in</button>
           <button
