after git restore

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,7 @@
           <button
             type="button"
             class="new-account"
-            onclick="window.location.href='register.html'"
-          >
+            onclick="window.location.href='register.html'">
             Create New Account
           </button>
         </form>
