--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Activity Planner| Home</title>
     <link rel="stylesheet" href="css/style.css" />
-    <script src="/js/login.js" type="module"></script>
+    
   </head>
 
   <body>
@@ -30,5 +30,8 @@
         </form>
       </div>
     </div>
+
+    <script src="/js/main.js" type="module"></script>
+    
   </body>
 </html>
