--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -18,10 +18,11 @@
     </main>
 
     <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
-    <button onclick="showWeather()">Weather</button>
+    <button id="showWeather" onclick="showWeather()">Weather</button>
 
-    <button onclick="deleteActivity()">Edit Activity</button>
-    <!--for manager only-->
+    <!--display only for manager view only-->
+    <button id="editActivity">Delete Activity></button>
+    <button id ="deleteActivity" onclick="deleteActivity()">Delete Activity</button>
 
     <footer></footer>
 
