--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -12,14 +12,14 @@
     <h2>Activity Details</h2>
     <div id="activityModal" class="modal">
       <div class="modal-content">
-        <span class="close">&times;</span>
         <div id="modalContent"></div>
+        <button class="close-button">Close</button>
       </div>
     </div>
-    <p>Lorem Ipsum</p>
-
-    <button>Edit Details</button>
-    <!--Account Manager only-->
+    
+    <!--To conditionally display for account manager-->
+    <button id="editDetails">Edit Details</button>
+   
 
     <script src="../js/main.js" type="module"></script>
     
