--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -12,14 +12,12 @@
     <h2>Activity Details</h2>
     <div id="activityModal" class="modal">
       <div class="modal-content">
-        <div id="modalContent"></div>
-        <button class="close-button">Close</button>
-      </div>
+        <span class="close">&times;</span>
+        <!--Details display here-->
     </div>
     
     <!--To conditionally display for account manager-->
-    <button id="editDetails">Edit Details</button>
-   
+    <button id="editDetails" class="managerButton">Edit Details</button>
 
     <script src="../js/main.js" type="module"></script>
     
