file corrections and prepop. 3 activities

--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -9,7 +9,9 @@
   <!--On the correct date the calendar will display the activity name and the time-->
   <!--The user then click the activity for the details on activity-->
   <body>
-    <header><h2>Our Activity Calendar</h2></header>
+    <header>
+      <h2>Our Activity Calendar</h2>
+    </header>
     <main>
       <div class="calendar">
         <div class="header"><!--calendar headers (days of week) --></div>
