--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -11,9 +11,10 @@
   <body>
     <h2>Activity Details</h2>
     <div id="activityModal" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
+      <div id="modalContent" class="modal-content">
+        <span id="close" class="close">&times;</span>
         <!--Details display here-->
+      </div>
     </div>
     
     <!--To conditionally display for account manager-->
