added features & now login issues

--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -11,7 +11,7 @@
       <h1>Activity Planner</h1>
       <h2>Add an Activity</h2>
     </header>
-    <form id="activityForm">
+    <form id="activityForm" autocomplete="off">
       <label for="activityName">Activity Name:</label>
       <input type="text" id="activityName" required/><br /><br />
       <label for="activityDescription">Activity Description:</label><br>
