resolv login issues. work on activEntry sub

--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -16,7 +16,7 @@
       <input type="text" id="activityName" required/><br /><br />
       <label for="activityDescription">Activity Description:</label><br>
       <textarea id="activityDescription"
-      name="activityDescription" rows="8" columns="150" required>
+      name="activityDescription" rows="8" cols="50" required>
         </textarea><br /><br /><br /><br />
       <label for="activityDate">Date</label>
       <input type="date" id="activityDate" name="activityDate" required/><br /><br />
@@ -30,8 +30,8 @@
         placeholder="0.5"
       required/><span> hrs</span><br /><br /><br /><br />
 
-      <label for="address">Activity Location:</label><br>
-      <textarea id="address" name="address" rows="4" columns="20" required></textarea><br /><br />
+      <label for="activityAddress">Activity Location:</label><br>
+      <textarea id="activityAddress" name="activityAddress" rows="4" cols="30" required></textarea><br /><br />
       <label for="activityCost">Activity Cost: $</label>
       <input
         type="number"
@@ -46,9 +46,9 @@
         placeholder="5.00" required/><br /><br /><br /><br />
 
       <label for="organizerName">Organizer Name:</label>
-      <input type="text" name="organizerName" /><br /><br />
+      <input type="text" id="organizerName" name="organizerName" /><br /><br />
       <label for="organizerEmail">Organizer email</label>
-      <input type="email" id="organizerEmail" /><br /><br /><br /><br />
+      <input type="email" id="organizerEmail" name="organizerEmail"/><br /><br /><br /><br />
 
       <button type="submit">Add Activity</button>
     </form>
