--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="begin">
       <div class="login container">
         <h1>Login</h1>
-        <form id="loginForm" onsubmit="handleLogin(event)">
+        <form id="loginForm">
           <input type="email" id="userName" name="userName" autocomplete="username" placeholder="email@email.com" required>
           <br /><br /><br />
           <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password" required>
