--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -55,6 +55,7 @@
     <footer></footer>
 
     <script src="../js/main.js" type="module"></script>
+    <script src="../js/activityEntry.js" type="module"></script>
     
   </body>
 </html>
