--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
         
         <form id="loginForm">
           <input type="email" id="userName" name="userName" autocomplete="username" placeholder="email@email.com" required>
-          <br /><br /><br />
-          <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password" required>
+          <br /><br />
+          <input type="password" id="password" name="password" autocomplete="current-password" placeholder="password" required><br><br><br>
 
-          <button type="submit">Log in</button>
+          <button type="submit" class="login">Log in</button>
           <button
             type="button"
             class="new-account"
