--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,9 +6,9 @@
     <title>Activity Planner| Activity Entry</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body class="page-background">
-    <header id="main-header">
-      <h1>Activity Planner</h1>
+  <body class="activty-entry-background">
+    <header id="activ-entry-header">
+      <img src="../images/mt-rushmore-mountain-8322610_1280-pixabay.jpg" alt="Mount Rushmore" width="500" height="300">
       <h2>Add an Activity</h2>
     </header>
     <form id="activityForm" autocomplete="off">
