activityEntry Styled but not fully functioning

--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body class="activty-entry-background">
-    <header id="activ-entry-header">
+    <header id="activ-entry-hero" class="image-container">
       <img src="../images/mt-rushmore-mountain-8322610_1280-pixabay.jpg" alt="Mount Rushmore" width="500" height="300">
-      <h2>Add an Activity</h2>
+      <h2 class="overlay-text">Add an Activity</h2>
     </header>
+    <div id="activ-entry-subhero">
+      <img src="../images/barth-bailey-s0di82cRiUQ-unsplash-Liberty-Crop.jpg" alt="Statue of Liberty: Head & Torch" width="500" height="300">
+    </div>
     <form id="activityForm" autocomplete="off">
       <label for="activityName">Activity Name:</label>
-      <input type="text" id="activityName" required/><br /><br />
+      <input type="text" id="activityName" required/><br /><br /><br><br>
       <label for="activityDescription">Activity Description:</label><br>
       <textarea id="activityDescription"
       name="activityDescription" rows="8" cols="50" required>
