--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -28,9 +28,8 @@
     <button id="editActivity" class="managerButton">Edit Activity</button>
     <button id ="deleteActivity" class="managerButton" buttonclick="deleteActivity()">Delete Activity</button>
 
-    <footer></footer>
+    <footer class="footer"></footer>
 
     <script src="../js/main.js" type="module"></script>
-    
   </body>
 </html>
