trying to resolve error on startup

--- a/src/weather/index.html
+++ b/src/weather/index.html
@@ -12,7 +12,7 @@
     
     <div class="weather container">
       <h1>Weather Request</h1>
-      <form id="weatherForm">
+      <form id="weatherForm" autocomplete="off">
         
         <input type="text" id="activityCity" name="activityCity"  placeholder="City" required><br><br><br>
         <input type="text" id="activityState" name="activityState"  placeholder="Sate" required><br><br><br>
