--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
       </div>
     </div>
 
-    <script src="/js/main.js" type="module"></script>
+    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="../js/login.js"></script>
   </body>
 </html>
