--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -64,7 +64,7 @@
     </form>
     <footer class="footer"></footer>
 
-    <script src="../js/main.js" type="module"></script>
+    <!--<script src="/js/main.js" type="module"></script>-->
     <script src="../js/activityEntry.js" type="module"></script>
   </body>
 </html>
