--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -30,6 +30,6 @@
 
     <footer class="footer"></footer>
 
-    <script src="../js/main.js" type="module"></script>
+    <script src="../js/calendar.js" type="module"></script>
   </body>
 </html>
