--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -65,6 +65,6 @@
     <footer class="footer"></footer>
 
     <!--<script src="/js/main.js" type="module"></script>-->
-    <script src="../js/activityEntry.js" type="module"></script>
+    <script type="module" src="../js/activityEntry.js" ></script>
   </body>
 </html>
