--- a/src/details-modal/index.html
+++ b/src/details-modal/index.html
@@ -21,7 +21,7 @@
     <!--To conditionally display for account manager-->
     <button id="editDetails" class="managerButton">Edit Details</button>
 
-    <script src="../js/detailModal.js" type="module"></script>
+    <script type="module" src="../js/detailModal.js"></script>
     
   </body>
 </html>
