--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -26,7 +26,7 @@
 
     <!--display only for manager view only-->
     <button id="editActivity" class="managerButton">Edit Activity</button>
-    <button id ="deleteActivity" class="managerButton" buttonclick="deleteActivity()">Delete Activity</button>
+    <button id ="deleteActivity" class="managerButton">Delete Activity</button>
 
     <footer class="footer"></footer>
 
