--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -14,7 +14,15 @@
     </header>
     <main>
       <div class="calendar">
-        <div class="header"><!--calendar headers (days of week) --></div>
+        <div class="header"><!--calendar headers (days of week) -->
+          <div>Sun</div>
+          <div>Mon</div>
+          <div>Tue</div>
+          <div>Wed</div>
+          <div>Thu</div>
+          <div>Fri</div>
+          <div>Sat</div>
+        </div>
         <!--Dates will be generated here-->
       </div>
     </main>
