calendar display issues resolved

--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <div class="calendar">
-        <div class="header"><!--calendar headers (days of week) -->
+        <div class="week-header"><!--calendar headers (days of week) -->
           <div>Sun</div>
           <div>Mon</div>
           <div>Tue</div>
@@ -30,7 +30,7 @@
 <!--Note: Need to be able to click on the activity in the calendar to open modal-->
 
     <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
-    <button id="showWeather">Check Weather</button>
+    <button id="showWeather" class="weatherButton">Check Weather</button>
 
     <!--display only for manager view only-->
     <button id="editActivity" class="managerButton">Edit Activity</button>
