weather check/date error/time conversion

--- a/src/weather/index.html
+++ b/src/weather/index.html
@@ -10,8 +10,11 @@
 
   <body>
     
-    <div class="weather container">
-      <h1>Weather Request</h1>
+    <div class="weather container" class="modal-content">
+      <div>
+      <h2>Weather Request</h2>
+      <span id="close" class="close">&times;</span>
+    </div>
       <form id="weatherForm" autocomplete="off">
         
         <input type="text" id="activityCity" name="activityCity"  placeholder="City" required><br><br><br>
