--- a/src/calendar/index.html
+++ b/src/calendar/index.html
@@ -30,7 +30,7 @@
 <!--Note: Need to be able to click on the activity in the calendar to open modal-->
 
     <!--The user will highlight any day on the calendar and then click the weather button to see the weather for that day-->
-    <button id="showWeather" class="weatherButton">Check Weather</button>
+    <button type ="button" id="checkWeather" class="weatherButton" onclick="location.href='../weather/index.html'">Check Weather</button>
 
     <!--display only for manager view only-->
     <button id="editActivity" class="managerButton">Edit Activity</button>
