--- a/src/activityEntry/index.html
+++ b/src/activityEntry/index.html
@@ -15,44 +15,44 @@
       <img src="../images/barth-bailey-s0di82cRiUQ-unsplash-Liberty-Crop.jpg" alt="Statue of Liberty: Head & Torch" width="500" height="300">
     </div>
     <form id="activityForm" autocomplete="off">
-      <label for="activityName">Activity Name:</label>
-      <input type="text" id="activityName" required/><br /><br /><br><br>
-      <label for="activityDescription">Activity Description:</label><br>
-      <textarea id="activityDescription"
-      name="activityDescription" rows="8" cols="45" required>
+      <label for="name">Activity Name:</label>
+      <input type="text" id="name" name="name" required/><br /><br /><br><br>
+      <label for="description">Activity Description:</label><br>
+      <textarea id="description"
+      name="description" rows="8" cols="45" required>
         </textarea><br /><br /><br /><br />
-      <label for="activityDate">Date</label>
-      <input type="date" id="activityDate" name="activityDate" required/><br /><br />
-      <label for="activityTime">Time:</label>
-      <input type="time" id="activityTime" name="activityTime" required/><br /><br />
-      <label for="activityDuration">Activity Duration:</label>
+      <label for="date">Date</label>
+      <input type="date" id="date" name="date" required/><br /><br />
+      <label for="time">Time:</label>
+      <input type="time" id="time" name="time" required/><br /><br />
+      <label for="duration">Activity Duration:</label>
       <input
         type="number"
-        id="activityDuration"
-        name="activityDuration"
+        id="duration"
+        name="duration" step="0.1"
         placeholder="0.5"
       required/><span> hrs</span><br /><br /><br /><br />
 
-      <label for="activityStreet">Street Address:</label><br>
-      <input type="text" id="activityStreet" name="activityStreet" required/><br /><br />
-      <label for="activityCity">City:</label><br>
-      <input type="text" id="activityCity" name="activityCity" required/><br /><br />
-      <label for="activityState">State:</label><br>
-      <input type="text" id="activityState" name="activityState" required/><br /><br />
-      <label for="activityZip">Zip:</label><br>
-      <input type="text" id="activityZip" name="activityZip" required/><br /><br />
+      <label for="street">Street Address:</label><br>
+      <input type="text" id="street" name="street" required/><br /><br />
+      <label for="city">City:</label><br>
+      <input type="text" id="city" name="city" required/><br /><br />
+      <label for="state">State:</label><br>
+      <input type="text" id="state" name="state" required/><br /><br />
+      <label for="zip">Zip:</label><br>
+      <input type="text" id="zip" name="zip" required/><br /><br />
 
-      <label for="activityCost">Activity Cost: $</label>
+      <label for="cost">Activity Cost: $</label>
       <input
         type="number"
-        id="activityCost" name="activityCost"
+        id="cost" name="cost" step="0.01"
         placeholder="25.00" required/><br /><br /><br />
 
       <label for="parkingFee">Parking Fee:</label>
       <input
         type="number"
         id="parkingFee"
-        name="parkingFee"
+        name="parkingFee" step="0.01"
         placeholder="5.00" required/><br /><br /><br /><br />
 
       <label for="organizerName">Organizer Name:</label>
