--- a/src/weather/index.html
+++ b/src/weather/index.html
@@ -17,8 +17,8 @@
     </div>
       <form id="weatherForm" autocomplete="off">
         
-        <input type="text" id="city" name="city"  placeholder="Pinckney" required><br><br><br>
-        <input type="text" id="state" name="state"  placeholder="MI" required><br><br><br>
+        <input type="text" id="city"   placeholder="Enter City" required><br><br><br>
+        <input type="text" id="state"   placeholder="MI" required><br><br><br>
         <input type="date" id="date" name="date"  required><!-- YYYY-MM-DD -->
 
         <button type="submit">Get Weather</button>
